<resources>
    <string name="app_name">GameLive</string>

    <string name="room_gift_description">送出一个%1$s</string>
    <string name="layout_gift_continue_send_default">"连发\n%d"</string>
    <string name="room_send">赠送</string>

    <string name="Please_wait">请稍后</string>

    <string name="commen_notmake">敬请期待</string>
    <string name="msg_network_error">网络异常，请稍后重试</string>
    <string name="msg_unknown_error">未知错误，请稍后重试</string>
    <string name="msg_argument_error">参数错误</string>
    <string name="Please_enter_the_live_theme">请输入直播主题，最多10个字</string>
    <string name="start_live_by_sign">开始直播</string>
    <string name="go_to_live">开播</string>

    <string name="The_theme_cannot_be_empty">主题不能为空</string>
    <string name="Upload_a_background_map">请上传一张背景图片</string>
    <string name="network_disconnected_hint">当前网络不可用, 请检查你的网络设置</string>
    <string name="take_photo">相机</string>
    <string name="select_pic_lib">相册</string>
    <string name="cancel">取消</string>
    <string name="start_camera_failed">打开相机失败</string>
    <string name="login_input_phone_hint">请输入手机号</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="login_forget_password" >忘记密码?</string>
    <string name="login_title">登录</string>
    <string name="login_regiest_user">立即注册 ></string>

    <string name="login_error_phone_number">请输入正确的手机号码！</string>
    <string name="login_error_password">密码不能为空！</string>
    <string name="regiest_get_check_code">获取验证码</string>
    <string name="forget_get_check_code">短信验证码</string>
    <string name="regiest_setting_password">设置密码,长度6到12位</string>
    <string name="regiest_next_step">下一步</string>
    <string name="regiest_agreement_pre">继续即表示同意</string>
    <string name="regiest_agreement_next">《注册服务协议》</string>
    <string name="regiest_yinsi_agreement">《隐私政策》</string>
    <string name="login_check_code_password">验证码不能为空！</string>

    <string name="regiest_captcha_countdown">%1$ds</string>
    <string name="code_error">验证码错误</string>
    <string name="old_phone">请输入手机号码</string>
    <string name="jmui_confirm">确定</string>
    <string name="on_line_audience">在线人数:%1$s</string>

</resources>
