<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#66000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_bg_record_profile"
        android:layout_above="@+id/ll_record_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/ll_record_profile"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <Button
            android:id="@+id/profile_popu_camera"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/take_photo"
            android:background="@drawable/sel_btn_bg"
            android:layout_width="250dp"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/profile_popu_photo"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/select_pic_lib"
            android:background="@drawable/sel_btn_bg"
            android:layout_width="250dp"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/profile_popu_cancel"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:background="@drawable/sel_btn_bg"
            android:layout_width="250dp"
            android:layout_height="40dp" />
    </LinearLayout>
</RelativeLayout>