<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginLeft="@dimen/dp15"
        android:background="@drawable/ic_global_nav_back"/>


    <TextView
        android:layout_marginTop="@dimen/dp40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#999999"
        android:text="登录"
        android:textSize="@dimen/sp42"/>


    <RelativeLayout
        android:id="@+id/rl_phone_status"
        android:layout_marginTop="@dimen/dp48"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:background="@drawable/selector_edit_bg">

        <ImageView
            android:id="@+id/login_iv_phone_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:src="@mipmap/login_phone_ic"
            android:layout_centerVertical="true"/>
        <EditText
            android:id="@+id/et_login_input_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_input_phone_hint"
            android:layout_toRightOf="@id/login_iv_phone_ic"
            android:textSize="@dimen/sp17"
            android:inputType="number"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_centerVertical="true"
            android:background="#0000"
            android:duplicateParentState="true"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_password_status"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/selector_edit_bg">

        <ImageView
            android:id="@+id/login_iv_password_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_centerVertical="true"
            android:src="@mipmap/login_password_ic"/>
        <EditText
            android:id="@+id/et_login_input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_input_password_hint"
            android:layout_toRightOf="@id/login_iv_password_ic"
            android:textSize="@dimen/sp17"
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_centerVertical="true"
            android:background="#0000"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forget_password"
            android:textSize="@dimen/sp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginTop="@dimen/dp20"
            android:textColor="@color/color_666666"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/bt_login_now"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:background="@drawable/shape_commit_radius_by_blue"/>


    <TextView
        android:layout_marginTop="45dp"
        android:id="@+id/tv_login_regiest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_regiest_user"
        android:textSize="@dimen/dp15"
        android:textColor="@color/color_1093ED"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>
